<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".activities.ShowActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/show_screen_icon"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/gsb_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Title -->
    <TextView
        android:id="@+id/show_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_screen_title"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/show_screen_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!-- DateRapport -->
    <TextView
        android:id="@+id/show_screen_daterapport_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/show_screen_daterapport_label"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/show_screen_title"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/show_screen_daterapport_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/show_screen_daterapport_output"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="@id/show_screen_daterapport_label"
        app:layout_constraintLeft_toRightOf="@id/show_screen_daterapport_label" />

    <!-- DateVisite -->
    <TextView
        android:id="@+id/show_screen_datevisite_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/show_screen_datevisite_label"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/show_screen_daterapport_label"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/show_screen_datevisite_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/show_screen_datevisite_output"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="@id/show_screen_datevisite_label"
        app:layout_constraintLeft_toRightOf="@id/show_screen_datevisite_label" />

    <!-- Praticien -->
    <TextView
        android:id="@+id/show_screen_praticien_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/show_screen_praticien_label"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/show_screen_datevisite_label"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/show_screen_praticien_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/show_screen_praticien_output"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="@id/show_screen_praticien_label"
        app:layout_constraintLeft_toRightOf="@id/show_screen_praticien_label" />

    <!-- Motif -->
    <TextView
        android:id="@+id/show_screen_motif_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/show_screen_motif_label"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/show_screen_praticien_label"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/show_screen_motif_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/show_screen_motif_output"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="@id/show_screen_motif_label"
        app:layout_constraintLeft_toRightOf="@id/show_screen_motif_label" />

    <!-- Bilan -->
    <TextView
        android:id="@+id/show_screen_bilan_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/show_screen_bilan_label"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/show_screen_motif_label"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/show_screen_bilan_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_screen_bilan_output"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/show_screen_bilan_label"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!-- CoefConfiance -->
    <TextView
        android:id="@+id/show_screen_coefconfiance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/show_screen_coefconfiance_label"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/show_screen_bilan_output"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/show_screen_coefconfiance_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/show_screen_coefconfiance_output"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="@id/show_screen_coefconfiance_label"
        app:layout_constraintLeft_toRightOf="@id/show_screen_coefconfiance_label" />

    <!-- Back button -->
    <Button
        android:id="@+id/show_screen_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_screen_back_button"
        android:textColor="@color/colorWhite"
        android:background="@drawable/custom_blue_button"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_screen_coefconfiance_label" />

</androidx.constraintlayout.widget.ConstraintLayout>