<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".LoginActivity">

    <!-- TITLE -->

    <TextView
        android:id="@+id/login_screen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_screen_title"
        android:textSize="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <!-- ID -->

    <TextView
        android:id="@+id/login_screen_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_screen_id_label"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@+id/login_screen_title" />

    <EditText
        android:id="@+id/login_screen_id_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/login_screen_id_input"
        app:layout_constraintStart_toEndOf="@+id/login_screen_id_label"
        app:layout_constraintTop_toBottomOf="@+id/login_screen_title" />

    <!-- PASSWORD -->

    <TextView
        android:id="@+id/login_screen_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_screen_password_label"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_screen_id_input" />

    <EditText
        android:id="@+id/login_screen_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/login_screen_password_input"
        app:layout_constraintStart_toEndOf="@+id/login_screen_password_label"
        app:layout_constraintTop_toBottomOf="@+id/login_screen_id_input" />

    <!-- CONFIRM BUTTON -->
    <Button
        android:id="@+id/login_screen_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_screen_confirm_button"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_screen_password_label" />

    <!-- CANCEL BUTTON -->
    <Button
        android:id="@+id/login_screen_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_screen_cancel_button"
        app:layout_constraintTop_toTopOf="@+id/login_screen_confirm_button"
        app:layout_constraintStart_toEndOf="@+id/login_screen_confirm_button"/>



</android.support.constraint.ConstraintLayout>