<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".activities.AddActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/add_screen_icon"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/gsb_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Title -->
    <TextView
        android:id="@+id/add_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_screen_title"
        android:textSize="23dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/add_screen_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!-- DateVisite -->
    <TextView
        android:id="@+id/add_screen_datevisite_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_screen_datevisite_label"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/add_screen_title"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/add_screen_datevisite_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_screen_datevisite_input"
        app:layout_constraintBaseline_toBaselineOf="@+id/add_screen_datevisite_label"
        app:layout_constraintLeft_toRightOf="@+id/add_screen_datevisite_label" />
        <!-- android:text="2019-01-01" -->

    <!-- Praticien -->
    <TextView
        android:id="@+id/add_screen_praticien_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_screen_praticien_label"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/add_screen_datevisite_label"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/add_screen_praticien_spinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        app:layout_constraintLeft_toRightOf="@+id/add_screen_praticien_label"
        app:layout_constraintTop_toTopOf="@+id/add_screen_praticien_label"/>

    <!-- Motif -->
    <TextView
        android:id="@+id/add_screen_motif_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_screen_motif_label"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_screen_praticien_label" />

    <EditText
        android:id="@+id/add_screen_motif_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_screen_motif_input"
        android:singleLine="true"
        app:layout_constraintLeft_toRightOf="@+id/add_screen_motif_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/add_screen_motif_label" />
        <!-- android:text="Un motif" -->

    <!-- Bilan -->
    <TextView
        android:id="@+id/add_screen_bilan_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_screen_bilan_label"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_screen_motif_label" />

    <EditText
        android:id="@+id/add_screen_bilan_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="3"
        android:minLines="3"
        android:maxLines="3"
        android:gravity="top|left"
        android:scrollbars="vertical"
        android:hint="@string/add_screen_bilan_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_screen_bilan_label" />
        <!-- android:text="Un bilan" -->

    <!-- CoefConfiance -->
    <TextView
        android:id="@+id/add_screen_coefconfiance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_screen_coefconfiance_label"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_screen_bilan_input" />

    <Spinner
        android:id="@+id/add_screen_coefconfiance_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        app:layout_constraintLeft_toRightOf="@+id/add_screen_coefconfiance_label"
        app:layout_constraintTop_toTopOf="@+id/add_screen_coefconfiance_label"/>

    <!-- Confirm button -->
    <Button
        android:id="@+id/add_screen_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_screen_confirm_button"
        android:textColor="@color/colorWhite"
        android:background="@drawable/custom_cyan_button"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_screen_coefconfiance_label" />

    <!-- Back button -->
    <Button
        android:id="@+id/add_screen_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_screen_back_button"
        android:textColor="@color/colorWhite"
        android:background="@drawable/custom_blue_button"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/add_screen_confirm_button"
        app:layout_constraintStart_toEndOf="@+id/add_screen_confirm_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>