<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".activities.HomeActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/home_screen_icon"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/gsb_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Title -->
    <TextView
        android:id="@+id/home_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_screen_title"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/home_screen_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!-- Add -->
    <Button
        android:id="@+id/home_screen_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/custom_cyan_button"
        android:text="@string/home_screen_add_button"
        app:layout_constraintTop_toBottomOf="@+id/home_screen_title" />

    <!-- Month -->
    <Button
        android:id="@+id/home_screen_month_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/custom_cyan_button"
        android:text="@string/home_screen_month_button"
        app:layout_constraintTop_toBottomOf="@+id/home_screen_add_button" />

    <!-- Logout -->
    <Button
        android:id="@+id/home_screen_logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/custom_blue_button"
        android:text="@string/home_screen_logout_button"
        app:layout_constraintTop_toBottomOf="@+id/home_screen_month_button" />

</androidx.constraintlayout.widget.ConstraintLayout>