<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MonthActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/month_screen_icon"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/gsb_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Title -->
    <TextView
        android:id="@+id/month_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month_screen_title"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/month_screen_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!-- DateRapport -->
    <TextView
        android:id="@+id/month_screen_daterapport_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/month_screen_daterapport_label"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/month_screen_title"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/month_screen_daterapport_spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        app:layout_constraintLeft_toRightOf="@+id/month_screen_daterapport_label"
        app:layout_constraintTop_toTopOf="@+id/month_screen_daterapport_label"/>

    <!-- Confirm button -->
    <Button
        android:id="@+id/month_screen_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month_screen_confirm_button"
        android:textColor="@color/colorWhite"
        android:background="@drawable/custom_cyan_button"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_screen_daterapport_label" />

    <!-- Back button -->
    <Button
        android:id="@+id/month_screen_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month_screen_back_button"
        android:textColor="@color/colorWhite"
        android:background="@drawable/custom_blue_button"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/month_screen_confirm_button"
        app:layout_constraintStart_toEndOf="@+id/month_screen_confirm_button"/>

</android.support.constraint.ConstraintLayout>