<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".activities.ShowAllActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/show_all_screen_icon"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/gsb_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Title -->
    <TextView
        android:id="@+id/show_all_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_all_screen_title"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/show_all_screen_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!-- Recyclerview -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/show_all_screen_title">
    </androidx.recyclerview.widget.RecyclerView>

    <!-- Back button -->
    <Button
        android:id="@+id/show_all_screen_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_all_screen_back_button"
        android:textColor="@color/colorWhite"
        android:background="@drawable/custom_blue_button"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler" />

    <!-- Detail button -->
    <Button
        android:id="@+id/show_all_screen_detail_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_all_screen_detail_button"
        android:textColor="@color/colorWhite"
        android:background="@drawable/custom_cyan_button"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_all_screen_back_button" />

</androidx.constraintlayout.widget.ConstraintLayout>